Include OLFC in article

--- a/abstract.tex
+++ b/abstract.tex
@@ -28,9 +28,11 @@
   yields larger profits than an optimal, expected value maximising
   policy.
   However, this approximate algorithm performs significantly worse in
-  the
-  remaining realisations, implying a more risk-seeking attitude by the
+  the remaining realisations, implying a more risk-seeking attitude by the
   retailer.
+  Another policy, the Open-Loop Feedback Control, is shown to work
+  well as a compromise between the Certainty Equivalent Control
+  and the optimal policy.
   % However, this approximate algorithm is less robust to model misspecification, and thus
   % requires that the retailer spends more resources on state estimation.
 \end{abstract}
