--- a/references.bib
+++ b/references.bib
@@ -47,7 +47,8 @@
   title={Dynamic pricing: A learning approach},
   author={Bertsimas, Dimitris J and Perakis, Georgia},
   year={2001},
-  institution={Massachusetts Institute of Technology, Operations Research Center}
+  institution={Massachusetts Institute of Technology, Operations Research Center},
+  note={\url{http://hdl.handle.net/1721.1/5314}}
 }
 
 @article{bitran1998coordinating,
