--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
 \usepackage{breqn}
 
 \usepackage{subfiles}
-\def\biblio{\bibliographystyle{abbrvnat}\bibliography{references}}
+\def\biblio{\bibliographystyle{rsta}\bibliography{references}}
 
 \begin{document}
 \title{A comparison of control strategies applied to a
@@ -56,13 +56,12 @@
 \subfile{control_comparison}
 \subfile{conclusion}
 
-%\dataccess{TODO: make github repository of code and csv files}
-\aucontribute{A.~N.~Riseth has done all the mathematical
-  research and numerical experiments in this article. J.~N.~Dewynne
-  and C.~L.~Farmer
-  proposed to solve the problem with the different algorithms
-  described in this article, and has contributed with valuable
-  suggestions and feedback.}
+%\dataccess{TODO: make github repository of code and csv files?}
+\aucontribute{JND and CLF contributed to specifying the problems and
+  choosing the types of algorithms to study. ANR devised the method
+  for comparing algorithms, performed all the calculations and drafted
+  the first version of the paper. All authors were responsible for the
+  final preparation of the manuscript.}
 \competing{The authors declare that they have no competing interests.}
 \funding{This publication is based on work partially supported by the EPSRC
 Centre For Doctoral Training in Industrially Focused Mathematical
