Typos from Marco

--- a/bellman_control.tex
+++ b/bellman_control.tex
@@ -198,7 +198,7 @@ problem, using the Bellman equation:\todo{Decorate with some algorithm environme
 \item Return $v^K,\alpha^K$.
 \end{enumerate}
 The expectation above is approximated using Monte-Carlo simulation, in
-this article we use \num{1000} samples. We chose to use piecewice
+this article we use \num{1000} samples. We chose to use piecewise
 linear interpolation for $I[v^K](s)$.
 
 
