--- a/conclusion.tex
+++ b/conclusion.tex
@@ -25,7 +25,8 @@ than the optimal policy in more than half of the realisations.
 However, in the remaining realisations, the CEC policy resulted in
 much smaller profits. We interpret these results as an indication that
 the suboptimal policy is more risk-seeking than the optimal policy.
-The results in this article underscore the importance of looking at the impact
+The results in this article underscore the importance of looking at
+the impact of
 different suboptimal algorithms have on the distribution of
 an objective, and not only the impact of
 marginalised statistics such as the expected value.
