--- a/control_comparison.tex
+++ b/control_comparison.tex
@@ -400,7 +400,7 @@ OLFC policy $\alpha^O$ with the performance of following the Bellman
 policy $\alpha^B$. With the parameters from the example system in
 Subsection~\ref{sec:bellman_optimal_control}\ref{sec:bellman_example_markdown},
 the empirical distribution of $P(\alpha^B)-P(\alpha^O)$ is shown in
-\Cref{fig:bellman_olfc_vals}. The emprical distribution is generated
+\Cref{fig:bellman_olfc_vals}. The empirical distribution is generated
 using \num{10000} samples of $W$.
 There are two notable differences in this distribution from the
 distribution of $P(\alpha^B)-P(\alpha^C)$ shown in \Cref{fig:bellman_det_vals}.
