--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@
 %\dataccess{TODO: make github repository of code and csv files?}
 \aucontribute{JND and CLF contributed to specifying the problems and
   choosing the types of algorithms to study. ANR devised the method
-  for comparing algorithms, performed all the calculations and drafted
+  for comparing algorithms, performed all the calculations, and drafted
   the first version of the paper. All authors were responsible for the
   final preparation of the manuscript.}
 \competing{The authors declare that they have no competing interests.}
