toprules and midrules

--- a/control_comparison.tex
+++ b/control_comparison.tex
@@ -342,9 +342,10 @@ grey dots in \Cref{fig:profit_diff_heatmaps}.
 \begin{table}[htbp]
   \centering
   \begin{tabular}{llllcccc}
+    \toprule
     $C$ & $\gamma$ & $q_1$ & $q_2$ & $\mathcal Q_{0.05}$
     &Median & $\mathcal Q_{0.95}$ &$L^2$\\
-    \toprule
+    \midrule
     $0.25$ & $0.05$ & $2.0$ & $4.0$  & \textbf{-0.4} & \textbf{-0.3} & \textbf{0.6} & \textbf{0.4}\\
     $0.25$ & $0.1$ & $1.33$ & $2.67$ & \textbf{-0.5} & \textbf{-0.0} & \textbf{0.6} & \textbf{0.3}\\
     $0.5$ & $0.05$ & $2.67$ & $4.0$  & \textbf{-0.6} & \textbf{-0.6} & \textbf{1.9} & \textbf{1.1}\\
@@ -445,9 +446,10 @@ smaller than in the CEC comparison.
 \begin{table}[htbp]
   \centering
   \begin{tabular}{llllcccc}
+    \toprule
     $C$ & $\gamma$ & $q_1$ & $q_2$ & $\mathcal Q_{0.05}$
     &Median & $\mathcal Q_{0.95}$ &$L^2$\\
-    \toprule
+    \midrule
     $0.25$ & $0.05$ & $2.0$ & $4.0$
                                    & \textbf{-0.6} & \textbf{0.1} & \textbf{1.2} & \textbf{0.6} \\
     $0.25$ & $0.1$ & $1.33$ & $2.67$
