Change to PRSA template

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{rstransa}
+\documentclass{rsproca_new}
 
 \usepackage[l2tabu, orthodox]{nag}
 \usepackage{booktabs}
@@ -28,13 +28,16 @@
 \usepackage{breqn}
 
 \usepackage{subfiles}
-\def\biblio{\bibliographystyle{rsta}\bibliography{references}}
+\def\biblio{\bibliographystyle{RS}\bibliography{references}}
+
+\jname{rspa}
+\Journal{Proc R Soc A\ }
 
 \begin{document}
 \title{A comparison of control strategies applied to a
   pricing problem in retail}
 
-\author{J.~N.~Dewynne$^{1}$, C.~L.~Farmer$^{1}$ and A.~N.~Riseth$^{1}$}
+\author{A.~N.~Riseth$^{1}$, J.~N.~Dewynne$^{1}$, and C.~L.~Farmer$^{1}$}
 \address{$^{1}$Mathematical Institute, University of Oxford, OX2 6GG.}
 \corres{Asbj{\o}rn Nilsen Riseth\\
   \email{riseth@maths.ox.ac.uk}}
@@ -69,7 +72,7 @@ Modelling (EP/L015803/1) in collaboration with dunnhumby Limited.}
 
 % Bibliography:
 %\clearpage
-\bibliographystyle{rsta}
+\bibliographystyle{RS}
 \bibliography{references}
 
 \end{document}
