Fix xcolor error

--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,4 @@
+\RequirePackage{xcolor}
 \documentclass{rsproca_new}
 
 \usepackage[l2tabu, orthodox]{nag}
@@ -59,7 +60,6 @@
 \subfile{control_comparison}
 \subfile{conclusion}
 
-%\dataccess{TODO: make github repository of code and csv files?}
 \aucontribute{JND and CLF contributed to specifying the problems and
   choosing the types of algorithms to study. ANR devised the method
   for comparing algorithms, performed all the calculations, and drafted
