--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,10 @@
 \usepackage[disable]{todonotes}
 \usepackage{subcaption}
 \usepackage[noabbrev]{cleveref}
-\setlength{\marginparwidth}{3.1cm} % For todonotes
+%\setlength{\marginparwidth}{3.1cm} % For todonotes
+
+\usepackage{lineno}
+\linenumbers
 
 \DeclareMathOperator*{\argmax}{arg\,max}
 
